--- a/package.json
+++ b/package.json
@@ -5,23 +5,24 @@
   "version": "0.1.0",
   "author": "Michael Whittet",
   "dependencies": {
-    "@types/react-helmet": "^5.0.15",
+    "@types/react-helmet": "^6.0.0",
     "@types/styled-components": "^5.1.0",
     "babel-plugin-styled-components": "^1.10.7",
-    "gatsby": "^2.21.21",
+    "gatsby": "^2.21.29",
+    "gatsby-cli": "^2.12.20",
     "gatsby-image": "^2.4.3",
-    "gatsby-plugin-manifest": "^2.4.2",
-    "gatsby-plugin-offline": "^3.2.1",
+    "gatsby-plugin-manifest": "^2.4.3",
+    "gatsby-plugin-offline": "^3.2.2",
     "gatsby-plugin-react-helmet": "^3.3.1",
     "gatsby-plugin-robots-txt": "^1.5.0",
-    "gatsby-plugin-sharp": "^2.6.2",
+    "gatsby-plugin-sharp": "^2.6.3",
     "gatsby-plugin-sitemap": "^2.4.2",
     "gatsby-plugin-styled-components": "^3.3.1",
     "gatsby-plugin-svgr-loader": "^0.1.0",
     "gatsby-plugin-typescript": "^2.4.2",
     "gatsby-plugin-web-font-loader": "^1.0.4",
-    "gatsby-source-filesystem": "^2.3.1",
-    "gatsby-transformer-json": "^2.4.1",
+    "gatsby-source-filesystem": "^2.3.3",
+    "gatsby-transformer-json": "^2.4.2",
     "gatsby-transformer-sharp": "^2.5.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -31,12 +32,12 @@
   },
   "devDependencies": {
     "@types/enzyme": "^3.10.5",
-    "@types/jest": "^25.2.1",
-    "@types/node": "^13.13.5",
-    "@types/react": "^16.9.34",
-    "@types/react-dom": "^16.9.7",
+    "@types/jest": "^25.2.2",
+    "@types/node": "^14.0.1",
+    "@types/react": "^16.9.35",
+    "@types/react-dom": "^16.9.8",
     "babel-jest": "^26.0.1",
-    "babel-preset-gatsby": "^0.4.1",
+    "babel-preset-gatsby": "^0.4.2",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "enzyme-to-json": "^3.4.4",
