--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@types/styled-components": "^5.1.0",
     "babel-plugin-styled-components": "^1.10.7",
     "gatsby": "^2.21.29",
-    "gatsby-cli": "^2.12.20",
+    "gatsby-cli": "^2.12.34",
     "gatsby-image": "^2.4.3",
     "gatsby-plugin-manifest": "^2.4.3",
     "gatsby-plugin-offline": "^3.2.2",
@@ -20,7 +20,7 @@
     "gatsby-plugin-styled-components": "^3.3.1",
     "gatsby-plugin-svgr-loader": "^0.1.0",
     "gatsby-plugin-typescript": "^2.4.2",
-    "gatsby-plugin-web-font-loader": "^1.0.4",
+    "gatsby-plugin-webfonts": "^1.1.2",
     "gatsby-source-filesystem": "^2.3.3",
     "gatsby-transformer-json": "^2.4.2",
     "gatsby-transformer-sharp": "^2.5.2",
