--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "build": "gatsby clean && gatsby build",
     "clean": "gatsby clean",
     "develop": "gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "yarn develop",
     "serve": "gatsby serve",
     "test": "jest --coverage"
