--- a/package.json
+++ b/package.json
@@ -8,22 +8,22 @@
     "@types/react-helmet": "^6.0.0",
     "@types/styled-components": "^5.1.0",
     "babel-plugin-styled-components": "^1.10.7",
-    "gatsby": "^2.21.29",
+    "gatsby": "^2.22.9",
     "gatsby-cli": "^2.12.34",
-    "gatsby-image": "^2.4.3",
-    "gatsby-plugin-manifest": "^2.4.3",
-    "gatsby-plugin-offline": "^3.2.2",
-    "gatsby-plugin-react-helmet": "^3.3.1",
+    "gatsby-image": "^2.4.5",
+    "gatsby-plugin-manifest": "^2.4.9",
+    "gatsby-plugin-offline": "^3.2.7",
+    "gatsby-plugin-react-helmet": "^3.3.2",
     "gatsby-plugin-robots-txt": "^1.5.0",
-    "gatsby-plugin-sharp": "^2.6.3",
-    "gatsby-plugin-sitemap": "^2.4.2",
-    "gatsby-plugin-styled-components": "^3.3.1",
+    "gatsby-plugin-sharp": "^2.6.9",
+    "gatsby-plugin-sitemap": "^2.4.3",
+    "gatsby-plugin-styled-components": "^3.3.2",
     "gatsby-plugin-svgr-loader": "^0.1.0",
-    "gatsby-plugin-typescript": "^2.4.2",
+    "gatsby-plugin-typescript": "^2.4.3",
     "gatsby-plugin-webfonts": "^1.1.2",
-    "gatsby-source-filesystem": "^2.3.3",
-    "gatsby-transformer-json": "^2.4.2",
-    "gatsby-transformer-sharp": "^2.5.2",
+    "gatsby-source-filesystem": "^2.3.8",
+    "gatsby-transformer-json": "^2.4.3",
+    "gatsby-transformer-sharp": "^2.5.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.0.0",
@@ -33,12 +33,12 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.8.0",
     "@testing-library/react": "^10.0.4",
-    "@types/jest": "^25.2.2",
-    "@types/node": "^14.0.1",
+    "@types/jest": "^25.2.3",
+    "@types/node": "^14.0.5",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "babel-jest": "^26.0.1",
-    "babel-preset-gatsby": "^0.4.2",
+    "babel-preset-gatsby": "^0.4.7",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.0.1",
     "prettier": "^2.0.5"
@@ -54,7 +54,7 @@
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "yarn develop",
     "serve": "gatsby serve",
-    "test": "jest --coverage"
+    "test": "tsc && jest --coverage"
   },
   "repository": {
     "type": "git",
