--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Michael Whittet",
   "dependencies": {
+    "@types/react-google-recaptcha": "^1.1.2",
     "@types/react-helmet": "^6.0.0",
     "@types/styled-components": "^5.1.0",
     "babel-plugin-styled-components": "^1.10.7",
@@ -26,6 +27,7 @@
     "gatsby-transformer-sharp": "^2.5.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-google-recaptcha": "^2.0.1",
     "react-helmet": "^6.0.0",
     "react-icons": "^3.10.0",
     "styled-components": "^5.1.1"
