--- a/package.json
+++ b/package.json
@@ -5,44 +5,44 @@
   "version": "0.1.0",
   "author": "Michael Whittet",
   "dependencies": {
-    "@types/react-google-recaptcha": "^1.1.2",
+    "@types/react-google-recaptcha": "^2.1.0",
     "@types/react-helmet": "^6.0.0",
-    "@types/styled-components": "^5.1.0",
-    "babel-plugin-styled-components": "^1.10.7",
-    "gatsby": "^2.22.13",
-    "gatsby-cli": "^2.12.38",
-    "gatsby-image": "^2.4.5",
-    "gatsby-plugin-manifest": "^2.4.9",
-    "gatsby-plugin-offline": "^3.2.7",
-    "gatsby-plugin-react-helmet": "^3.3.2",
+    "@types/styled-components": "^5.1.2",
+    "babel-plugin-styled-components": "^1.11.1",
+    "gatsby": "^2.24.23",
+    "gatsby-cli": "^2.12.68",
+    "gatsby-image": "^2.4.14",
+    "gatsby-plugin-manifest": "^2.4.21",
+    "gatsby-plugin-offline": "^3.2.21",
+    "gatsby-plugin-react-helmet": "^3.3.10",
     "gatsby-plugin-robots-txt": "^1.5.1",
-    "gatsby-plugin-sharp": "^2.6.9",
-    "gatsby-plugin-sitemap": "^2.4.3",
-    "gatsby-plugin-styled-components": "^3.3.2",
+    "gatsby-plugin-sharp": "^2.6.24",
+    "gatsby-plugin-sitemap": "^2.4.11",
+    "gatsby-plugin-styled-components": "^3.3.10",
     "gatsby-plugin-svgr-loader": "^0.1.0",
-    "gatsby-plugin-typescript": "^2.4.3",
-    "gatsby-plugin-webfonts": "^1.1.2",
-    "gatsby-source-filesystem": "^2.3.8",
-    "gatsby-transformer-json": "^2.4.3",
-    "gatsby-transformer-sharp": "^2.5.3",
+    "gatsby-plugin-typescript": "^2.4.16",
+    "gatsby-plugin-webfonts": "^1.1.3",
+    "gatsby-source-filesystem": "^2.3.23",
+    "gatsby-transformer-json": "^2.4.11",
+    "gatsby-transformer-sharp": "^2.5.12",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-google-recaptcha": "^2.0.1",
-    "react-helmet": "^6.0.0",
+    "react-google-recaptcha": "^2.1.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^3.10.0",
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.9.0",
-    "@testing-library/react": "^10.0.4",
-    "@types/jest": "^25.2.3",
-    "@types/node": "^14.0.6",
-    "@types/react": "^16.9.35",
+    "@testing-library/jest-dom": "^5.11.2",
+    "@testing-library/react": "^10.4.7",
+    "@types/jest": "^26.0.8",
+    "@types/node": "^14.0.27",
+    "@types/react": "^16.9.44",
     "@types/react-dom": "^16.9.8",
-    "babel-jest": "^26.0.1",
-    "babel-preset-gatsby": "^0.4.7",
+    "babel-jest": "^26.2.2",
+    "babel-preset-gatsby": "^0.5.4",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^26.0.1",
+    "jest": "^26.2.2",
     "prettier": "^2.0.5"
   },
   "keywords": [
@@ -57,6 +57,7 @@
     "start": "yarn develop",
     "serve": "gatsby serve",
     "test": "tsc && jest --coverage",
+    "test:unit": "jest --watch",
     "check-deps": "npx npm-check-updates",
     "update-deps": "npx npm-check-updates -u && yarn"
   },
