--- a/package.json
+++ b/package.json
@@ -7,40 +7,40 @@
   "dependencies": {
     "@types/react-google-recaptcha": "^2.1.0",
     "@types/react-helmet": "^6.1.0",
-    "@types/styled-components": "^5.1.4",
+    "@types/styled-components": "^5.1.7",
     "babel-plugin-styled-components": "^1.12.0",
-    "gatsby": "^2.28.1",
-    "gatsby-cli": "^2.15.0",
-    "gatsby-image": "^2.7.0",
-    "gatsby-plugin-manifest": "^2.8.0",
-    "gatsby-plugin-offline": "^3.6.0",
-    "gatsby-plugin-react-helmet": "^3.6.0",
-    "gatsby-plugin-robots-txt": "^1.5.3",
-    "gatsby-plugin-sharp": "^2.10.1",
-    "gatsby-plugin-sitemap": "^2.8.0",
-    "gatsby-plugin-styled-components": "^3.6.0",
+    "gatsby": "^3.0.4",
+    "gatsby-cli": "^3.0.0",
+    "gatsby-plugin-image": "^1.0.1",
+    "gatsby-plugin-manifest": "^3.0.0",
+    "gatsby-plugin-offline": "^4.0.0",
+    "gatsby-plugin-react-helmet": "^4.0.0",
+    "gatsby-plugin-robots-txt": "^1.5.5",
+    "gatsby-plugin-sharp": "^3.0.1",
+    "gatsby-plugin-sitemap": "^3.0.0",
+    "gatsby-plugin-styled-components": "^4.0.0",
     "gatsby-plugin-svgr-loader": "^0.1.0",
-    "gatsby-plugin-typescript": "^2.8.0",
-    "gatsby-plugin-webfonts": "^1.1.3",
-    "gatsby-source-filesystem": "^2.7.0",
-    "gatsby-transformer-json": "^2.7.0",
-    "gatsby-transformer-sharp": "^2.8.0",
+    "gatsby-plugin-typescript": "^3.0.0",
+    "gatsby-plugin-webfonts": "^2.0.0",
+    "gatsby-source-filesystem": "^3.0.0",
+    "gatsby-transformer-json": "^3.0.0",
+    "gatsby-transformer-sharp": "^3.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-google-recaptcha": "^2.1.0",
     "react-helmet": "^6.1.0",
-    "react-icons": "^4.1.0",
+    "react-icons": "^4.2.0",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.2.2",
-    "@types/jest": "^26.0.18",
-    "@types/node": "^14.14.11",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.5",
+    "@types/jest": "^26.0.20",
+    "@types/node": "^14.14.33",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.2",
     "babel-jest": "^26.6.3",
-    "babel-preset-gatsby": "^0.8.0",
+    "babel-preset-gatsby": "^1.0.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "prettier": "^2.2.1"
