--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "babel-preset-gatsby": "^1.6.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
-    "prettier": "^2.3.0"
+    "prettier": "^2.3.0",
+    "typescript": "^4.3.4"
   },
   "keywords": [
     "gatsby"
