--- a/package.json
+++ b/package.json
@@ -7,24 +7,24 @@
   "dependencies": {
     "@types/react-google-recaptcha": "^2.1.2",
     "@types/react-helmet": "^6.1.2",
-    "@types/styled-components": "^5.1.11",
+    "@types/styled-components": "^5.1.12",
     "babel-plugin-styled-components": "^1.13.2",
-    "gatsby": "^3.10.2",
-    "gatsby-cli": "^3.10.0",
-    "gatsby-plugin-image": "^1.10.1",
-    "gatsby-plugin-manifest": "^3.10.0",
-    "gatsby-plugin-offline": "^4.10.0",
-    "gatsby-plugin-react-helmet": "^4.10.0",
+    "gatsby": "^3.11.0",
+    "gatsby-cli": "^3.11.0",
+    "gatsby-plugin-image": "^1.11.0",
+    "gatsby-plugin-manifest": "^3.11.0",
+    "gatsby-plugin-offline": "^4.11.0",
+    "gatsby-plugin-react-helmet": "^4.11.0",
     "gatsby-plugin-robots-txt": "^1.6.8",
-    "gatsby-plugin-sharp": "^3.10.2",
-    "gatsby-plugin-sitemap": "^4.6.0",
-    "gatsby-plugin-styled-components": "^4.10.0",
+    "gatsby-plugin-sharp": "^3.11.0",
+    "gatsby-plugin-sitemap": "^4.7.0",
+    "gatsby-plugin-styled-components": "^4.11.0",
     "gatsby-plugin-svgr-loader": "^0.1.0",
-    "gatsby-plugin-typescript": "^3.10.0",
+    "gatsby-plugin-typescript": "^3.11.0",
     "gatsby-plugin-webfonts": "^2.1.1",
-    "gatsby-source-filesystem": "^3.10.0",
-    "gatsby-transformer-json": "^3.10.0",
-    "gatsby-transformer-sharp": "^3.10.0",
+    "gatsby-source-filesystem": "^3.11.0",
+    "gatsby-transformer-json": "^3.11.0",
+    "gatsby-transformer-sharp": "^3.11.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-recaptcha": "^2.1.0",
@@ -36,11 +36,11 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@types/jest": "^26.0.24",
-    "@types/node": "^16.4.7",
-    "@types/react": "^17.0.15",
+    "@types/node": "^16.4.13",
+    "@types/react": "^17.0.16",
     "@types/react-dom": "^17.0.9",
     "babel-jest": "^27.0.6",
-    "babel-preset-gatsby": "^1.10.0",
+    "babel-preset-gatsby": "^1.11.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.0.6",
     "prettier": "^2.3.2",
@@ -53,7 +53,7 @@
   "scripts": {
     "build": "gatsby clean && gatsby build",
     "clean": "gatsby clean",
-    "develop": "gatsby develop",
+    "develop": "gatsby develop -p 8001",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "yarn develop",
     "serve": "gatsby serve",
