--- a/package.json
+++ b/package.json
@@ -5,46 +5,47 @@
   "version": "1.0.0",
   "author": "Michael Whittet",
   "dependencies": {
-    "gatsby": "^3.13.0",
-    "gatsby-cli": "^3.13.0",
-    "gatsby-plugin-image": "^1.13.0",
-    "gatsby-plugin-manifest": "^3.13.0",
-    "gatsby-plugin-offline": "^4.13.0",
-    "gatsby-plugin-react-helmet": "^4.13.0",
-    "gatsby-plugin-robots-txt": "^1.6.10",
-    "gatsby-plugin-sharp": "^3.13.0",
-    "gatsby-plugin-sitemap": "^4.9.0",
-    "gatsby-plugin-styled-components": "^4.13.0",
+    "gatsby": "^4.1.4",
+    "gatsby-cli": "^4.1.3",
+    "gatsby-plugin-image": "^2.1.2",
+    "gatsby-plugin-manifest": "^4.1.3",
+    "gatsby-plugin-offline": "^5.1.3",
+    "gatsby-plugin-react-helmet": "^5.1.0",
+    "gatsby-plugin-robots-txt": "^1.6.14",
+    "gatsby-plugin-sharp": "^4.1.3",
+    "gatsby-plugin-sitemap": "^5.1.1",
+    "gatsby-plugin-styled-components": "^5.1.0",
     "gatsby-plugin-svgr-loader": "^0.1.0",
-    "gatsby-plugin-typescript": "^3.13.0",
+    "gatsby-plugin-typescript": "^4.1.2",
     "gatsby-plugin-webfonts": "^2.1.1",
-    "gatsby-source-filesystem": "^3.13.0",
-    "gatsby-transformer-json": "^3.13.0",
-    "gatsby-transformer-sharp": "^3.13.0",
+    "gatsby-source-filesystem": "^4.1.2",
+    "gatsby-transformer-json": "^4.1.0",
+    "gatsby-transformer-sharp": "^4.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-recaptcha": "^2.1.0",
     "react-helmet": "^6.1.0",
-    "react-icons": "^4.2.0",
-    "styled-components": "^5.3.1"
+    "react-icons": "^4.3.1",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.0.0",
-    "@types/jest": "^27.0.1",
-    "@types/node": "^16.9.1",
-    "@types/react": "^17.0.20",
-    "@types/react-dom": "^17.0.9",
+    "@testing-library/jest-dom": "^5.15.0",
+    "@testing-library/react": "^12.1.2",
+    "@types/cacheable-request": "^6.0.2",
+    "@types/jest": "^27.0.2",
+    "@types/node": "^16.11.7",
+    "@types/react": "^17.0.34",
+    "@types/react-dom": "^17.0.11",
     "@types/react-google-recaptcha": "^2.1.2",
-    "@types/react-helmet": "^6.1.2",
-    "@types/styled-components": "^5.1.14",
-    "babel-jest": "^27.1.1",
-    "babel-plugin-styled-components": "^1.13.2",
-    "babel-preset-gatsby": "^1.13.0",
+    "@types/react-helmet": "^6.1.4",
+    "@types/styled-components": "^5.1.15",
+    "babel-jest": "^27.3.1",
+    "babel-plugin-styled-components": "^1.13.3",
+    "babel-preset-gatsby": "^2.1.2",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^27.1.1",
-    "prettier": "^2.4.0",
-    "typescript": "^4.4.2"
+    "jest": "^27.3.1",
+    "prettier": "^2.4.1",
+    "typescript": "^4.4.4"
   },
   "keywords": [
     "gatsby"
