--- a/package.json
+++ b/package.json
@@ -5,22 +5,22 @@
   "version": "1.0.0",
   "author": "Michael Whittet",
   "dependencies": {
-    "gatsby": "^4.1.4",
-    "gatsby-cli": "^4.1.3",
-    "gatsby-plugin-image": "^2.1.2",
-    "gatsby-plugin-manifest": "^4.1.3",
-    "gatsby-plugin-offline": "^5.1.3",
-    "gatsby-plugin-react-helmet": "^5.1.0",
+    "gatsby": "^4.2.0",
+    "gatsby-cli": "^4.2.0",
+    "gatsby-plugin-image": "^2.2.0",
+    "gatsby-plugin-manifest": "^4.2.0",
+    "gatsby-plugin-offline": "^5.2.0",
+    "gatsby-plugin-react-helmet": "^5.2.0",
     "gatsby-plugin-robots-txt": "^1.6.14",
-    "gatsby-plugin-sharp": "^4.1.3",
-    "gatsby-plugin-sitemap": "^5.1.1",
-    "gatsby-plugin-styled-components": "^5.1.0",
+    "gatsby-plugin-sharp": "^4.2.0",
+    "gatsby-plugin-sitemap": "^5.2.0",
+    "gatsby-plugin-styled-components": "^5.2.0",
     "gatsby-plugin-svgr-loader": "^0.1.0",
-    "gatsby-plugin-typescript": "^4.1.2",
-    "gatsby-plugin-webfonts": "^2.1.1",
-    "gatsby-source-filesystem": "^4.1.2",
-    "gatsby-transformer-json": "^4.1.0",
-    "gatsby-transformer-sharp": "^4.1.0",
+    "gatsby-plugin-typescript": "^4.2.0",
+    "gatsby-plugin-webfonts": "^2.2.1",
+    "gatsby-source-filesystem": "^4.2.0",
+    "gatsby-transformer-json": "^4.2.0",
+    "gatsby-transformer-sharp": "^4.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-recaptcha": "^2.1.0",
@@ -34,18 +34,18 @@
     "@types/cacheable-request": "^6.0.2",
     "@types/jest": "^27.0.2",
     "@types/node": "^16.11.7",
-    "@types/react": "^17.0.34",
+    "@types/react": "^17.0.35",
     "@types/react-dom": "^17.0.11",
     "@types/react-google-recaptcha": "^2.1.2",
     "@types/react-helmet": "^6.1.4",
     "@types/styled-components": "^5.1.15",
     "babel-jest": "^27.3.1",
     "babel-plugin-styled-components": "^1.13.3",
-    "babel-preset-gatsby": "^2.1.2",
+    "babel-preset-gatsby": "^2.2.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.3.1",
     "prettier": "^2.4.1",
-    "typescript": "^4.4.4"
+    "typescript": "^4.5.2"
   },
   "keywords": [
     "gatsby"
@@ -54,9 +54,8 @@
   "scripts": {
     "build": "gatsby clean && gatsby build",
     "clean": "gatsby clean",
-    "develop": "gatsby develop -p 8001",
+    "dev": "gatsby develop -p 8001",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
-    "start": "yarn develop",
     "serve": "gatsby serve",
     "test": "tsc && jest --coverage",
     "test:unit": "jest --watch",
