--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gatsby-cli": "^4.10.1",
     "gatsby-plugin-image": "^2.10.0",
     "gatsby-plugin-manifest": "^4.10.1",
+    "gatsby-plugin-netlify": "^4.1.0",
     "gatsby-plugin-offline": "^5.10.1",
     "gatsby-plugin-react-helmet": "^5.10.0",
     "gatsby-plugin-robots-txt": "^1.7.0",
