--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@ bower_components
 build/Release
 
 # Dependency directories
+.yarn
 node_modules/
 jspm_packages/
 
@@ -65,5 +66,6 @@ public
 yarn-error.log
 .pnp/
 .pnp.js
+
 # Yarn Integrity file
 .yarn-integrity
