--- a/package.json
+++ b/package.json
@@ -5,47 +5,50 @@
   "version": "1.0.0",
   "author": "Michael Whittet",
   "dependencies": {
-    "gatsby": "^4.5.2",
-    "gatsby-cli": "^4.5.1",
-    "gatsby-plugin-image": "^2.5.1",
-    "gatsby-plugin-manifest": "^4.5.1",
-    "gatsby-plugin-offline": "^5.5.1",
-    "gatsby-plugin-react-helmet": "^5.5.0",
-    "gatsby-plugin-robots-txt": "^1.6.14",
-    "gatsby-plugin-sharp": "^4.5.1",
-    "gatsby-plugin-sitemap": "^5.5.0",
-    "gatsby-plugin-styled-components": "^5.5.0",
+    "gatsby": "^4.14.0",
+    "gatsby-cli": "^4.14.0",
+    "gatsby-plugin-image": "^2.14.1",
+    "gatsby-plugin-manifest": "^4.14.0",
+    "gatsby-plugin-netlify": "^4.3.1",
+    "gatsby-plugin-offline": "^5.14.0",
+    "gatsby-plugin-react-helmet": "^5.14.0",
+    "gatsby-plugin-robots-txt": "^1.7.1",
+    "gatsby-plugin-sharp": "^4.14.1",
+    "gatsby-plugin-sitemap": "^5.14.0",
+    "gatsby-plugin-styled-components": "^5.14.0",
     "gatsby-plugin-svgr-loader": "^0.1.0",
-    "gatsby-plugin-typescript": "^4.5.1",
-    "gatsby-plugin-webfonts": "^2.2.1",
-    "gatsby-source-filesystem": "^4.5.1",
-    "gatsby-transformer-json": "^4.5.0",
-    "gatsby-transformer-sharp": "^4.5.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "gatsby-plugin-typescript": "^4.14.0",
+    "gatsby-plugin-webfonts": "^2.2.2",
+    "gatsby-source-filesystem": "^4.14.0",
+    "gatsby-transformer-json": "^4.14.0",
+    "gatsby-transformer-sharp": "^4.14.0",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "react-google-recaptcha": "^2.1.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.2.0",
     "@types/cacheable-request": "^6.0.2",
-    "@types/jest": "^27.4.0",
-    "@types/node": "^17.0.8",
-    "@types/react": "^17.0.38",
-    "@types/react-dom": "^17.0.11",
-    "@types/react-google-recaptcha": "^2.1.2",
+    "@types/jest": "^27.5.1",
+    "@types/node": "^17.0.33",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.4",
+    "@types/react-google-recaptcha": "^2.1.5",
     "@types/react-helmet": "^6.1.5",
-    "@types/styled-components": "^5.1.20",
-    "babel-jest": "^27.4.6",
-    "babel-plugin-styled-components": "^2.0.2",
-    "babel-preset-gatsby": "^2.5.1",
+    "@types/styled-components": "^5.1.25",
+    "babel-jest": "^28.1.0",
+    "babel-plugin-styled-components": "^2.0.7",
+    "babel-preset-gatsby": "^2.14.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^27.4.7",
-    "prettier": "^2.5.1",
-    "typescript": "^4.5.4"
+    "jest": "^28.1.0",
+    "jest-environment-jsdom": "^28.1.0",
+    "jest-environment-jsdom-global": "^3.1.1",
+    "prettier": "^2.6.2",
+    "typescript": "^4.6.4"
   },
   "keywords": [
     "gatsby"
@@ -68,5 +71,6 @@
   },
   "bugs": {
     "url": "https://github.com/mwhittet/portfolio/issues"
-  }
+  },
+  "packageManager": "yarn@3.2.0"
 }
