--- a/package.json
+++ b/package.json
@@ -5,57 +5,57 @@
   "version": "1.0.0",
   "author": "Michael Whittet",
   "dependencies": {
-    "gatsby": "^4.14.0",
-    "gatsby-cli": "^4.14.0",
-    "gatsby-plugin-image": "^2.14.1",
-    "gatsby-plugin-manifest": "^4.14.0",
-    "gatsby-plugin-netlify": "^4.3.1",
-    "gatsby-plugin-offline": "^5.14.0",
-    "gatsby-plugin-react-helmet": "^5.14.0",
+    "gatsby": "^4.17.1",
+    "gatsby-cli": "^4.17.1",
+    "gatsby-plugin-image": "^2.17.0",
+    "gatsby-plugin-manifest": "^4.17.0",
+    "gatsby-plugin-netlify": "^5.0.0",
+    "gatsby-plugin-offline": "^5.17.0",
+    "gatsby-plugin-react-helmet": "^5.17.0",
     "gatsby-plugin-robots-txt": "^1.7.1",
-    "gatsby-plugin-sharp": "^4.14.1",
-    "gatsby-plugin-sitemap": "^5.14.0",
-    "gatsby-plugin-styled-components": "^5.14.0",
+    "gatsby-plugin-sharp": "^4.17.0",
+    "gatsby-plugin-sitemap": "^5.17.0",
+    "gatsby-plugin-styled-components": "^5.17.0",
     "gatsby-plugin-svgr-loader": "^0.1.0",
-    "gatsby-plugin-typescript": "^4.14.0",
+    "gatsby-plugin-typescript": "^4.17.0",
     "gatsby-plugin-webfonts": "^2.2.2",
-    "gatsby-source-filesystem": "^4.14.0",
-    "gatsby-transformer-json": "^4.14.0",
-    "gatsby-transformer-sharp": "^4.14.0",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
+    "gatsby-source-filesystem": "^4.17.0",
+    "gatsby-transformer-json": "^4.17.0",
+    "gatsby-transformer-sharp": "^4.17.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-google-recaptcha": "^2.1.0",
     "react-helmet": "^6.1.0",
-    "react-icons": "^4.3.1",
+    "react-icons": "^4.4.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.2.0",
+    "@testing-library/react": "^13.3.0",
     "@types/cacheable-request": "^6.0.2",
-    "@types/jest": "^27.5.1",
-    "@types/node": "^17.0.33",
-    "@types/react": "^18.0.9",
-    "@types/react-dom": "^18.0.4",
+    "@types/jest": "^28.1.3",
+    "@types/node": "^18.0.0",
+    "@types/react": "^18.0.14",
+    "@types/react-dom": "^18.0.5",
     "@types/react-google-recaptcha": "^2.1.5",
     "@types/react-helmet": "^6.1.5",
     "@types/styled-components": "^5.1.25",
-    "babel-jest": "^28.1.0",
+    "babel-jest": "^28.1.1",
     "babel-plugin-styled-components": "^2.0.7",
-    "babel-preset-gatsby": "^2.14.0",
+    "babel-preset-gatsby": "^2.17.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^28.1.0",
-    "jest-environment-jsdom": "^28.1.0",
-    "jest-environment-jsdom-global": "^3.1.1",
-    "prettier": "^2.6.2",
-    "typescript": "^4.6.4"
+    "jest": "^28.1.1",
+    "jest-environment-jsdom": "^28.1.1",
+    "jest-environment-jsdom-global": "^3.1.2",
+    "prettier": "^2.7.1",
+    "typescript": "^4.7.4"
   },
   "keywords": [
     "gatsby"
   ],
   "license": "MIT",
   "scripts": {
-    "build": "gatsby clean && gatsby build",
+    "build": "yarn clean && gatsby build",
     "clean": "gatsby clean",
     "dev": "gatsby develop -p 8001",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
@@ -63,7 +63,7 @@
     "test": "tsc && jest --coverage",
     "test:unit": "jest --watch",
     "check-deps": "npx npm-check-updates",
-    "update-deps": "npx npm-check-updates -u && yarn"
+    "update-deps": "yarn check-deps -u && yarn"
   },
   "repository": {
     "type": "git",
@@ -72,5 +72,5 @@
   "bugs": {
     "url": "https://github.com/mwhittet/portfolio/issues"
   },
-  "packageManager": "yarn@3.2.0"
+  "packageManager": "yarn@3.2.1"
 }
