Various updates, new approach to SEO

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "noImplicitAny": true,
     "pretty": true,
     "skipLibCheck": true,
+    "strict": true,
     "strictNullChecks": true,
     "target": "esnext"
   },
