--- a/package.json
+++ b/package.json
@@ -5,50 +5,47 @@
   "version": "1.0.0",
   "author": "Michael Whittet",
   "dependencies": {
-    "gatsby": "^5.7.0",
-    "gatsby-cli": "^5.7.0",
-    "gatsby-plugin-image": "^3.7.0",
-    "gatsby-plugin-manifest": "^5.7.0",
+    "gatsby": "^5.8.1",
+    "gatsby-cli": "^5.8.0",
+    "gatsby-plugin-image": "^3.8.0",
+    "gatsby-plugin-manifest": "^5.8.0",
     "gatsby-plugin-netlify": "^5.1.0",
-    "gatsby-plugin-offline": "^6.7.0",
-    "gatsby-plugin-react-helmet": "^6.7.0",
+    "gatsby-plugin-offline": "^6.8.0",
     "gatsby-plugin-robots-txt": "^1.8.0",
-    "gatsby-plugin-sharp": "^5.7.0",
-    "gatsby-plugin-sitemap": "^6.7.0",
-    "gatsby-plugin-styled-components": "^6.7.0",
+    "gatsby-plugin-sharp": "^5.8.1",
+    "gatsby-plugin-sitemap": "^6.8.0",
+    "gatsby-plugin-styled-components": "^6.8.0",
     "gatsby-plugin-svgr-loader": "^0.1.0",
-    "gatsby-plugin-typescript": "^5.7.0",
+    "gatsby-plugin-typescript": "^5.8.0",
     "gatsby-plugin-webfonts": "^2.3.2",
-    "gatsby-source-filesystem": "^5.7.0",
-    "gatsby-transformer-json": "^5.7.0",
-    "gatsby-transformer-sharp": "^5.7.0",
+    "gatsby-source-filesystem": "^5.8.0",
+    "gatsby-transformer-json": "^5.8.0",
+    "gatsby-transformer-sharp": "^5.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^2.1.0",
-    "react-helmet": "^6.1.0",
-    "react-icons": "^4.7.1",
-    "styled-components": "^5.3.8"
+    "react-icons": "^4.8.0",
+    "styled-components": "^5.3.9"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/cacheable-request": "^6.0.3",
-    "@types/jest": "^29.4.0",
-    "@types/node": "^18.14.4",
-    "@types/react": "^18.0.28",
+    "@types/jest": "^29.5.0",
+    "@types/node": "^18.15.11",
+    "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
     "@types/react-google-recaptcha": "^2.1.5",
-    "@types/react-helmet": "^6.1.6",
     "@types/styled-components": "^5.1.26",
-    "babel-jest": "^29.4.3",
-    "babel-plugin-styled-components": "^2.0.7",
-    "babel-preset-gatsby": "^3.7.0",
+    "babel-jest": "^29.5.0",
+    "babel-plugin-styled-components": "^2.1.1",
+    "babel-preset-gatsby": "^3.8.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^29.4.3",
-    "jest-environment-jsdom": "^29.4.3",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "jest-environment-jsdom-global": "^4.0.0",
-    "prettier": "^2.8.4",
-    "typescript": "^4.9.5"
+    "prettier": "^2.8.7",
+    "typescript": "^5.0.4"
   },
   "keywords": [
     "gatsby"
@@ -62,6 +59,7 @@
     "serve": "gatsby serve",
     "test": "tsc && jest --coverage",
     "test:unit": "jest --watch",
+    "type-check": "tsc --noEmit",
     "check-deps": "npx npm-check-updates",
     "update-deps": "yarn check-deps -u && yarn"
   },
