--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
     "skipLibCheck": true,
     "strict": true,
     "strictNullChecks": true,
-    "target": "esnext"
+    "target": "esnext",
+    "types": ["@testing-library/jest-dom"]
   },
-  "include": ["custom.d.ts", "src/*"]
+  "include": ["custom.d.ts", "src/**/*.ts"],
 }
