--- a/package.json
+++ b/package.json
@@ -49,7 +49,9 @@
   "resolutions": {
     "loader-utils": "^2.0.4",
     "minimatch": "^3.0.5",
-    "nth-check": "^2.0.1"
+    "nth-check": "^2.0.1",
+    "semver": "^7.5.2",
+    "yaml": "^2.2.2"
   },
   "keywords": [
     "gatsby"
