--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,3 +1,9 @@
 checksumBehavior: update
+
+compressionLevel: mixed
+
+enableGlobalCache: false
+
 nodeLinker: node-modules
-yarnPath: .yarn/releases/yarn-3.3.1.cjs
+
+yarnPath: .yarn/releases/yarn-4.0.2.cjs
