--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "typescript": "^5.3.3"
   },
   "resolutions": {
+    "axios": "1.6.0",
     "loader-utils": "^2.0.4",
     "minimatch": "^3.0.5",
     "nth-check": "^2.0.1",
