--- a/package.json
+++ b/package.json
@@ -47,12 +47,18 @@
     "typescript": "^5.6.2"
   },
   "resolutions": {
-    "axios": "1.6.0",
+    "axios": "1.7.4",
     "loader-utils": "^2.0.4",
     "minimatch": "^3.0.5",
     "nth-check": "^2.0.1",
     "semver": "^7.5.2",
     "yaml": "^2.2.2"
+  },
+  "overrides": {
+    "body-parser": "1.20.3",
+    "path-to-regexp": "0.1.10",
+    "webpack-dev-middleware": "^5.3.4",
+    "ws": "8.17.1"
   },
   "keywords": [
     "gatsby"
