--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "typescript": "^5.6.3"
   },
   "resolutions": {
+    "axios": "0.28.0",
     "body-parser": "1.20.3",
     "nth-check": "^2.0.1",
     "path-to-regexp": "0.1.10",
