--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   "resolutions": {
     "axios": "0.28.0",
     "body-parser": "1.20.3",
+    "cookie": "0.7.0",
     "nth-check": "^2.0.1",
     "path-to-regexp": "0.1.10",
     "webpack-dev-middleware": "^5.3.4",
