--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
+    "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.2",
     "@testing-library/react": "^16.0.1",
     "@types/jest": "^29.5.13",
