--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "body-parser": "1.20.3",
     "cookie": "0.7.0",
     "nth-check": "^2.0.1",
-    "path-to-regexp": "0.1.10",
+    "path-to-regexp": "0.1.12",
+    "serialize-javascript": "6.0.2",
     "webpack-dev-middleware": "^5.3.4",
     "ws": "8.17.1",
     "yaml": "^2.2.2"
